# MCP-RAG-Microsoft-Graph

./: .gitignore  README.md  app.py  env.example  mcp_with_hardcoded_auth.json  mcp_with_interactive_auth.json  pyproject.toml  streamlit_app.py
