[tool.poetry]
name = "sharepoint-rag-demo"
version = "0.1.0"
description = ""
authors = ["Harold Geumtcheng <geumtchengh@gmail.com>"]
readme = "README.md"
packages = [{include = "sharepoint_rag_demo"}]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.26"
langgraph = "^0.5.0"
langchain-aws = "^0.2.27"
mcp-use = "^1.3.3"
streamlit = "^1.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
